--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_API_KEY=AIzaSyCqCvXP6DD1lpxtrO4sog5vhf1Zgx3bVEo,
-VITE_AUTH_DOMAIN=skutan-788d7.firebaseapp.com,
-VITE_PROJECT_ID=skutan-788d7,
-VITE_STORAGE_BUCKET=skutan-788d7.appspot.com,
-VITE_MESSAGING_SENDER_ID=585546096610,
-VITE_APP_ID=1=585546096610=web=a8999543054cb06f9de3bb,
+VITE_API_KEY=AIzaSyCqCvXP6DD1lpxtrO4sog5vhf1Zgx3bVEo
+VITE_AUTH_DOMAIN=skutan-788d7.firebaseapp.com
+VITE_PROJECT_ID=skutan-788d7
+VITE_STORAGE_BUCKET=skutan-788d7.appspot.com
+VITE_MESSAGING_SENDER_ID=585546096610
+VITE_APP_ID=1=585546096610=web=a8999543054cb06f9de3bb
 VITE_MEASUREMENT_ID=G-2R10RWV4GN
